syntax = "proto3";

package main;

service MediaChatService {
    rpc Authorize (RequestAuthorize) returns (ResponseAuthorize);
    rpc Connect (RequestConnect) returns (stream Event);
    rpc Player (MediaChat) returns (None);
}

message None {}

message RequestAuthorize {
    string name = 1;
}

message ResponseAuthorize {
    int32 session_id = 1;
}

message RequestConnect {
    int32 session_id = 1;
}


enum PlayerState{
    UNKNOWN = 0;
    PAUSE = 1;
    REWIND = 3;
    FORWARD = 4;
    VOLUMN_UP = 5;
    VOLUMN_DOWN = 6;
    PLAY = 7;
    SYNC = 8;
}


message MediaChat{
    int32 sourceId = 1;
    PlayerMeta playerMeta = 2;
    int32 targetId = 3;
}


message Event {
    oneof Status {
        EventNone none = 1;
        EventJoin join = 2;
        EventLeave leave = 3;
        EventLog log = 4;
    }
}

message EventNone {}

message EventJoin {
    string name = 1;
}

message EventLeave {
    string name = 1;
}

message PlayerMeta{
    int64 currentPosition = 1;
    string url = 2;
    string title = 3;
    string subtitle = 4;
    PlayerState playerState = 5;
}

message EventLog {
    int32 souceId = 1;
    PlayerMeta playerMeta = 2;
}
